...
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:id="@+id/et_item_name"
            style="@style/Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
...
            android:layout_marginStart="16dp"
            android:text="@string/additem_dialog_color_label"
            app:layout_constraintTop_toBottomOf="@+id/et_item_name"
            app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
            android:id="@+id/iv_item_color"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/color_pick_drawable"
            app:layout_constraintEnd_toEndOf="parent"
...
