<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tv_no_items"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_items_in_the_list"
            android:layout_gravity="center" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:paddingBottom="?attr/actionBarSize"
            tools:itemCount="5"
            tools:listitem="@layout/item_layout"/>

</FrameLayout>